--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>PecuniaBank</name>
 	<description>Demo project for Spring Boot</description>
+	<properties>
+  		<sonar.projectKey>pecunia-transaction</sonar.projectKey>
+  		<sonar.organization>ganta-surya-bhagavan</sonar.organization>
+ 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -29,8 +34,7 @@
 		<dependency>
     		<groupId>org.hibernate</groupId>
     		<artifactId>hibernate-core</artifactId>
-   			<version>5.4.1.Final</version>
-		</dependency>
+   			</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
@@ -49,10 +53,8 @@
 		<dependency>
    			 <groupId>junit</groupId>
    			 <artifactId>junit</artifactId>
-   			 <version>4.12</version>
    			 <scope>test</scope>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
