--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.datasource.url=jdbc:h2:file:~/transcation
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+
+#logger
+logging.level.root=WARN
+logging.level.com.capgemini=INFO
