--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,6 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>PecuniaBank</name>
 	<description>Demo project for Spring Boot</description>
-	<properties>
-  		<sonar.projectKey>pecunia-transaction</sonar.projectKey>
-  		<sonar.organization>ganta-surya-bhagavan</sonar.organization>
- 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -54,6 +49,11 @@
    			 <groupId>junit</groupId>
    			 <artifactId>junit</artifactId>
    			 <scope>test</scope>
+		</dependency>
+		<dependency>
+   			 <groupId>org.sonarsource.scanner.maven</groupId>
+   			 <artifactId>sonar-maven-plugin</artifactId>
+   			 <version>3.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
